<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.likeview.csm.Fragment.NavHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_nav_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.likeview.csm.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.likeview.csm.Fragment.NavAddCoustomerFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/navigation_save"
        android:name="com.likeview.csm.Fragment.NavSaveFragment"
        android:label="@string/title_save"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.likeview.csm.Fragment.NavProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_add" />
</navigation>